He añadido al método initialize el escuchar los datos de cada persona

--- a/src/view/VistaPersona.fxml
+++ b/src/view/VistaPersona.fxml
@@ -63,7 +63,7 @@
                      <children>
                         <Button mnemonicParsing="false" text="Nuevo..." />
                         <Button mnemonicParsing="false" text="Editar..." />
-                        <Button mnemonicParsing="false" text="Borrar" />
+                        <Button mnemonicParsing="false" onAction="#borrarPersona" text="Borrar" />
                      </children>
                   </HBox>
                </children>
