--- a/src/view/VistaPersona.fxml
+++ b/src/view/VistaPersona.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.VistaPersonaController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="800.0" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.VistaPersonaController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="300.0" layoutY="120.0" prefHeight="400.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -28,9 +28,9 @@
                   </TableView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" text="Detalles" />
+                  <Label layoutX="14.0" layoutY="14.0" styleClass="label-header" text="Detalles" />
                   <GridPane layoutX="112.0" layoutY="128.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="30.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -45,18 +45,18 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Nombre" />
-                        <Label text="Apellidos" GridPane.rowIndex="1" />
-                        <Label text="Direccion" GridPane.rowIndex="2" />
-                        <Label text="Ciudad" GridPane.rowIndex="3" />
-                        <Label text="Codigo Postal" GridPane.rowIndex="4" />
-                        <Label text="Fecha Nacimiento" GridPane.rowIndex="5" />
-                        <Label fx:id="nombreLabel" text="Label" GridPane.columnIndex="1" />
-                        <Label fx:id="apellidosLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="direccionLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="ciudadLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label fx:id="codigoPostalLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label fx:id="fechaDeNacimientoLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label styleClass="label-bright" text="Nombre" />
+                        <Label styleClass="label-bright" text="Apellidos" GridPane.rowIndex="1" />
+                        <Label styleClass="label-bright" text="Direccion" GridPane.rowIndex="2" />
+                        <Label styleClass="label-bright" text="Ciudad" GridPane.rowIndex="3" />
+                        <Label styleClass="label-bright" text="Codigo Postal" GridPane.rowIndex="4" />
+                        <Label styleClass="label-bright" text="Fecha Nacimiento" GridPane.rowIndex="5" />
+                        <Label fx:id="nombreLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="apellidosLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="direccionLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="ciudadLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="codigoPostalLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="fechaDeNacimientoLabel" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                   <HBox layoutX="227.0" layoutY="347.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
